<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Day Book</string>
    <string name="bill_number">Bill Number</string>
    <string name="bill_amt">Bill Amount</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="summary">Summary</string>
    <string name="missing_bills">Missing Bills</string>
    <string name="report">Report</string>
</resources>
